# Pteredactyl

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  objects.inv  sitemap.xml
Python_Module/anonymising_dataframes/: index.html
Python_Module/developing-contributing/: index.html
Python_Module/examining_results/: index.html
Python_Module/landing/: index.html
Python_Module/mkdocstrings/: index.html
Python_Module/passing_custom_regex_entities/: index.html
Python_Module/quickstart/: index.html
Python_Module/reusing_an_analyser/: index.html
Python_Module/selecting_entities_to_redact/: index.html
Webapp-API/developing-contributing/: index.html
Webapp-API/docker/: index.html
Webapp-API/gradio/: index.html
Webapp-API/introduction/: index.html
abstract/: index.html
assets/js/: custom.js
doc/: Dockerfile  README.md  mkdocs.yml  pyproject.toml
doc/docs/: abstract.md  index.md  manifest.json  version.md
doc/docs/Python_Module/: anonymising_dataframes.md  developing-contributing.md  examining_results.md  landing.md  mkdocstrings.md  passing_custom_regex_entities.md  quickstart.md  reusing_an_analyser.md  selecting_entities_to_redact.md
doc/docs/Webapp-API/: docker.md  gradio.md  introduction.md
doc/docs/assets/css/: custom.css
doc/docs/assets/js/: custom.js
documentation/: Dockerfile  Pipfile  README.md  requirements.txt  user-guide.md
search/: search_index.json
src/api_webapp/: Dockerfile  app.py  build.bat  logging.yaml  pyproject.toml  requirements.txt
src/api_webapp/flagged/: log.csv
src/api_webapp/tests/: api_testing.ipynb
src/pteredactyl/: README.md  build.bat  defaults.py  exceptions.py  pyproject.toml  redactor.py  regex_entities.py  support.py
src/pteredactyl/pteredactyl/: __init__.py  defaults.py  mappings.py  redactor.py  regex_check_functions.py  regex_entities.py  support.py
src/pteredactyl/pteredactyl/recognisers/: transformers_recogniser.py
src/pteredactyl/pteredactyl/replacement_lists/raw/: uk-towns-and-cities-a.txt
src/pteredactyl/recognisers/: pteredactyl_recogniser.py  support.py
src/pteredactyl/replacement_lists/: generate_lists.py
src/pteredactyl/tests/: test_redactor.py  test_support.py
src/pteredactyl_webapp/: Dockerfile  README.md  app.py  pyproject.toml
src/pteredactyl_webapp/logs/: README.md
src/pteredactyl_webapp/tests/: test_api.py  test_redact.py  testing_matching.py  tests.py
version/: index.html
